Initial Server setup.

--- a/WebPage/dashboard.html
+++ b/WebPage/dashboard.html
@@ -52,17 +52,28 @@
 		<br>
 		<form">
 			Set Humidity: <input type="text" name="setHumidity">
+			<br>
+			<br>
 			Set Temperature: <input type="text" name="setTemperature"">
-			<input type="submit" value="Set new value">
+			<br>
+			<br>
+			<input type="submit" value="Save">
 		</form>
 	</div>
 
 	<div class="readTempHum">
 		<br>
-		<form">
-			Current Humidity: <input type="text" name="curHumidity">
-			Current Temperature: <input type="text" name="curTemperature"">
-		</form>
+			Current Humidity: 
+			<script type="text/javascript">
+			document.write('80')
+			</script> % </p> 
+	</div>
+
+	<div>
+		<p>Current Temperature: 
+		<script type="text/javascript">
+			document.write('23')
+			</script> &degF</p> 
 	</div>
 
 	<footer>
