--- a/esp32_web_serv/dashboard.html
+++ b/esp32_web_serv/dashboard.html
@@ -90,12 +90,12 @@
 			request.send(null);
 			setTimeout('getESPIO()', 1000);
 
-			// freezerStr = ""
-			// humidifierStr = "";
-			// deHumidifierStr = "";
-			// heaterStr = "";
-			// internalFanStr = "";
-			// freshAirFanStr = "";
+			freezerStr = ""
+			humidifierStr = "";
+			deHumidifierStr = "";
+			heaterStr = "";
+			internalFanStr = "";
+			freshAirFanStr = "";
 			dev7Str = "";
 			dev8Str = "";
 
