Corrected text and more fancy.

--- a/WebPage/dashboard.html
+++ b/WebPage/dashboard.html
@@ -90,12 +90,12 @@
 			request.send(null);
 			setTimeout('getESPIO()', 1000);
 
-			// freezerStr = ""
-			// humidifierStr = "";
-			// deHumidifierStr = "";
-			// heaterStr = "";
-			// internalFanStr = "";
-			// freshAirFanStr = "";
+			freezerStr = ""
+			humidifierStr = "";
+			deHumidifierStr = "";
+			heaterStr = "";
+			internalFanStr = "";
+			freshAirFanStr = "";
 			dev7Str = "";
 			dev8Str = "";
 
@@ -178,7 +178,7 @@
 </head>
 
 <body onload="getESPIO()">
-	<header><h1> Meat Curing Chamber Dashboard </h1></header>
+	<header><h1> Meat Locker V 2.0 </h1></header>
 
 
 	<div class="enableDisableDevice">
@@ -220,7 +220,7 @@
 
 	<footer>
 		<p>
-			Copyright &copy <i>Keyl Schaub, 2018</i>
+			Copyright &copy <i>Kyel Schaub, 2018</i>
 		</p>
 	</footer>
 
