added heap clean

--- a/WebPage/dashboard.html
+++ b/WebPage/dashboard.html
@@ -5,14 +5,6 @@
 	<title>Chamber Control</title>
 	<script>
 
-		freezerStr = "";
-		humidifierStr = "";
-		deHumidifierStr = "";
-		heaterStr = "";
-		internalFanStr = "";
-		freshAirFanStr = "";
-		dev7Str = "";
-		dev8Str = "";
 
 		setTmpStr = "";
 		setHumStr = "";
@@ -40,137 +32,25 @@
 							this.responseXML.getElementsByTagName('settmp')[0].childNodes[0].nodeValue;
 														
 							document.getElementsByClassName("setPointHumidity")[0].innerHTML = 
-							this.responseXML.getElementsByTagName('sethum')[0].childNodes[0].nodeValue;
-
-							// Freezr Control
-							if (this.responseXML.getElementsByTagName('freezer')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.freezer.checked = true;
-							} else {
-								document.devForm.freezer.checked = false;
-							}	
-
-							if (this.responseXML.getElementsByTagName('humidifier')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.humidifier.checked = true;
-							} else {
-								document.devForm.humidifier.checked = false;
-							}	
-							
-							if (this.responseXML.getElementsByTagName('deHumidifier')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.deHumidifier.checked = true;
-							} else {
-								document.devForm.deHumidifier.checked = false;
-							}	
-
-							if (this.responseXML.getElementsByTagName('heater')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.heater.checked = true;
-							} else {
-								document.devForm.heater.checked = false;
-							}	
-
-							if (this.responseXML.getElementsByTagName('internalFan')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.internalFan.checked = true;
-							} else {
-								document.devForm.internalFan.checked = false;
-							}	
-
-							if (this.responseXML.getElementsByTagName('freshAirFan')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.freshAirFan.checked = true;
-							} else {
-								document.devForm.freshAirFan.checked = false;
-							}	
-
-							if (this.responseXML.getElementsByTagName('dev7')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.dev7.checked = true;
-							} else {
-								document.devForm.dev7.checked = false;
-							}
-
-							if (this.responseXML.getElementsByTagName('dev8')[0].childNodes[0].nodeValue === "checked") {
-								document.devForm.dev8.checked = true;
-							} else {
-								document.devForm.dev8.checked = false;
-							}																																																						
+							this.responseXML.getElementsByTagName('sethum')[0].childNodes[0].nodeValue;																		
 						}
 					}
 				}					
 			}
 
-			request.open("GET", "updateData" + freezerStr + humidifierStr + deHumidifierStr + heaterStr + internalFanStr + freshAirFanStr + dev7Str + dev8Str + setHumStr + setTmpStr + nocache, true);
+			request.open("GET", "updateData" + setHumStr + setTmpStr + nocache, true);
 			request.send(null);
-			setTimeout('getESPIO()', 1000);
-
-			freezerStr = ""
-			humidifierStr = "";
-			deHumidifierStr = "";
-			heaterStr = "";
-			internalFanStr = "";
-			freshAirFanStr = "";
-			dev7Str = "";
-			dev8Str = "";
+			setTimeout('getESPIO()', 2000);
 
 			setTmpStr = "";
 			setHumStr = "";
 
 		}
 
-		function GetCheck() {
-
-			if (devForm.freezer.checked) {
-				freezerStr = "&freezer=1";			
-			} else {
-				freezerStr = "&freezer=0";
-			}
-
-			if (devForm.humidifier.checked) {
-				humidifierStr = "&humidifier=1";			
-			} else {
-				humidifierStr = "&humidifier=0";
-			}	
-
-			if (devForm.deHumidifier.checked) {
-				deHumidifierStr = "&deHumidifier=1";			
-			} else {
-				deHumidifierStr = "&deHumidifier=0";
-			}		
-
-			if (devForm.heater.checked) {
-				heaterStr = "&heater=1";			
-			} else {
-				heaterStr = "&heater=0";
-			}
-
-			if (devForm.internalFan.checked) {
-				internalFanStr = "&internalFan=1";			
-			} else {
-				internalFanStr = "&internalFan=0";
-			}	
-
-			if (devForm.freshAirFan.checked) {
-				freshAirFanStr = "&freshAirFan=1";			
-			} else {
-				freshAirFanStr = "&freshAirFan=0";
-			}		
-
-			if (devForm.dev7.checked) {
-				dev7Str = "&dev7=1";			
-			} else {
-				dev7Str = "&dev7=0";
-			}					
-
-			if (devForm.dev8.checked) {
-				dev8Str = "&dev8=1";			
-			} else {
-				dev8Str = "&dev8=0";
-			}							
-		}
-
 		function setHumTmp(){
 
 			var setTemperature = document.getElementsByName("setTemperature")[0].value;
 			var setHumidity = document.getElementsByName("setHumidity")[0].value;
-
-			// document.getElementsByClassName("setPointHumidity")[0].innerHTML = document.getElementsByName("setHumidity")[0].value;
-			// document.getElementsByClassName("setPointTemperature")[0].innerHTML = document.getElementsByName("setTemperature")[0].value;
 
 			if(!((setTemperature == "") || (setHumidity == ""))) {
 				setTmpStr = "&setTmp=" + (setTemperature).padStart(5, "0");					
@@ -208,22 +88,6 @@
 
 <body onload="getESPIO()">
 	<header><h1> Meat Locker V 2.0 </h1></header>
-
-
-	<div class="enableDisableDevice">
-		<nav>
-			<form id="checkDev" name="devForm">Device Control<br>
-				<input type="checkbox" name="freezer" value="1" onclick="GetCheck()">Freezer<br>
-				<input type="checkbox" name="humidifier" value="0" onclick="GetCheck()">Humidifier<br>
-				<input type="checkbox" name="deHumidifier" value="0" onclick="GetCheck()">Dehumidifier<br>
-				<input type="checkbox" name="heater" value="0" onclick="GetCheck()">Heater<br>
-				<input type="checkbox" name="internalFan" value="0" onclick="GetCheck()">Internal fan<br>
-				<input type="checkbox" name="freshAirFan" value="0" onclick="GetCheck()">Fresh air fan<br>
-				<input type="checkbox" name="dev7" value="0" onclick="GetCheck()">Device 7<br>
-				<input type="checkbox" name="dev8" value="0" onclick="GetCheck()">Device 8<br>
-			</form>
-		</nav>
-	</div>
 
 	<div class="controlTmpHum">
 		<form>
